--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ android {
 
 dependencies {
     implementation "com.google.android.material:material:$material_version"
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.android.volley:volley:$volley_version"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
