--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.material_version = '1.2.0-alpha05'
+    ext.gson_version = '2.8.6'
+    ext.volley_version = '1.1.1'
     repositories {
         google()
         jcenter()
