--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".user.HomeActivity"
+        <activity android:name=".user.UserProfileEditActivity"></activity>
+        <activity
+            android:name=".user.HomeActivity"
             android:label="@string/title_activity_profile"
-            android:theme="@style/AppTheme.ProfileTheme"
-            ></activity>
+            android:theme="@style/AppTheme.ProfileTheme" />
         <activity android:name=".productview.ProductEditActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity">
